# continual-synapse-layer

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  SESSION_HANDOFF.md  THEORY.md  decisions_log.md  pyproject.toml  requirements.txt
colab/: cifar100_cls_pilot.ipynb  phase_2e_lora_training.ipynb
docs/: README.md
experiments/: 01_baseline_forgetting.py  02_ewc_baseline.py  03_synapse_layer_v1.py  04_synapse_with_resistance.py  06_multi_head_split_mnist.py  07_full_system_short.py  08_long_sequence_decisive.py  08b_plot_long_sequence.py  11_architectural_completion.py  11b_plot_architectural_completion.py  12_audit_fixes.py  13_amplification_test.py  16_cosine_familiarity.py  17_generalization_and_baselines.py  18_ewc_lambda_sweep.py  20_developmental_n10_validation.py  21_scaling_test.py  23_phase_b_validation.py  25_retrieval_ensemble_eval.py  27_reward_as_confidence_eval.py  28_episodic_dual_substrate_eval.py  29_pretrain_contrastive_encoder.py  30_functional_regularization_eval.py  31_memory_augmented_eval.py  32_cls_phase1_hippocampus.py  33_cls_phase2_neocortex.py  34_cls_phase3_storage.py  35_cls_phase4_consolidation.py  38_split_mnist_ci_der.py  39_split_mnist_ci_cls.py  40_split_mnist_ci_comparison.py  41_split_mnist_ci_cls_v2.py  43_test_cifar_cnn.py  44_test_cifar_memory_smoke.py  45_cls_ci_cifar.py  46_der_baseline_cifar100_ci.py  47_xray_memory_smoke.py  48_xray_integration_smoke.py  49_xray_split_mnist_ci.py  README.md
scripts/: analyze_distribution_drift.py  compare_validation_runs.py  evaluate_lora.py  evaluate_metacog.py  generate_metacog_data.py  (+3 more)
(+298 files in other folders)
